<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="GateI" Id="{4ddd9caa-7507-4247-b3e4-f91bf9d04593}">
    <Declaration><![CDATA[TYPE GateI :
STRUCT
	Open : BOOL;
	Close : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>