<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="GateO" Id="{000c5ace-dde8-4984-bb37-51b7d8469608}">
    <Declaration><![CDATA[TYPE GateO :
STRUCT
	Coil : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>