<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ProxI" Id="{410fbd4e-d078-4dd2-b08a-7f9f13517e55}">
    <Declaration><![CDATA[TYPE ProxI :
STRUCT
	Signal : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>